Changed names of some statistics to better reflect their purpose. Added plot scripts